--- a/translations/policy+intl-icu.en.yml
+++ b/translations/policy+intl-icu.en.yml
@@ -44,9 +44,11 @@ policy:
         <h2>Intellectual Property</h2>
         <p><strong>The site:</strong> Content protected by copyright. Personal use authorized, commercial use prohibited.</p>
 
-        <p><strong>Your content:</strong> You remain owner of your photos and reviews. By publishing them, you authorize us to use them within the service.</p>
+        <p><strong>Your content:</strong> You remain owner of your photos and reviews. By publishing them, you grant Captain Coaster a non-exclusive, worldwide license to display and use them within the service.</p>
 
         <p><strong>Photo upload:</strong> By uploading a photo, you guarantee that you own the copyright or have obtained written authorization from the rights holder.</p>
+
+        <p><strong>Photo reuse:</strong> Photos uploaded to Captain Coaster are protected by copyright and cannot be reused by third parties without explicit permission from the photographer. All rights reserved.</p>
 
         <p><strong>Issue:</strong> Content published without authorization? <a href="{contact_link}">Contact us</a> for removal.</p>
 
