--- a/translations/policy+intl-icu.fr.yml
+++ b/translations/policy+intl-icu.fr.yml
@@ -44,9 +44,11 @@ policy:
         <h2>Propriété Intellectuelle</h2>
         <p><strong>Le site :</strong> Contenu protégé par le droit d'auteur. Usage personnel autorisé, commercial interdit.</p>
 
-        <p><strong>Vos contenus :</strong> Vous restez propriétaire de vos photos et avis. En les publiant, vous nous autorisez à les utiliser dans le cadre du service.</p>
+        <p><strong>Vos contenus :</strong> Vous restez propriétaire de vos photos et avis. En les publiant, vous accordez à Captain Coaster une licence non-exclusive et mondiale pour les afficher et les utiliser dans le cadre du service.</p>
 
         <p><strong>Upload de photos :</strong> En téléchargeant une photo, vous garantissez posséder les droits d'auteur ou avoir obtenu l'autorisation écrite du propriétaire des droits.</p>
+
+        <p><strong>Réutilisation des photos :</strong> Les photos téléchargées sur Captain Coaster sont protégées par le droit d'auteur et ne peuvent pas être réutilisées par des tiers sans l'autorisation explicite du photographe. Tous droits réservés.</p>
 
         <p><strong>Problème :</strong> Contenu publié sans autorisation ? <a href="{contact_link}">Contactez-nous</a> pour suppression.</p>
 
