--- a/translations/validators+intl-icu.de.yml
+++ b/translations/validators+intl-icu.de.yml
@@ -4,3 +4,9 @@ ride_date:
     before_opening: Das Fahrdatum kann nicht vor der Eröffnung der Achterbahn liegen.
     after_closing: Das Fahrdatum kann nicht nach der Schließung der Achterbahn liegen.
     future: Das Fahrdatum kann nicht in der Zukunft liegen.
+
+# Image upload validation
+image_upload:
+    form:
+        copyright_agreement:
+            required: 'Sie müssen bestätigen, dass Sie die Rechte zum Hochladen dieses Fotos haben.'
