--- a/translations/validators+intl-icu.en.yml
+++ b/translations/validators+intl-icu.en.yml
@@ -8,3 +8,9 @@ ride_date:
     before_opening: The ride date cannot be before the coaster opened.
     after_closing: The ride date cannot be after the coaster closed.
     future: The ride date cannot be in the future.
+
+# Image upload validation
+image_upload:
+    form:
+        copyright_agreement:
+            required: 'You must confirm that you have the rights to upload this photo.'
